--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
-    <div class="classes">Div 1</div>
-    <div class="classes2">Div 2</div>
-    <div class="classes">Div 3</div>
+    
+    <!-- Logo  -->
+    <div class="logo">
+        <img src="assets/Logo.png" alt="">
+    </div>
+
+    <!-- Main content -->
+    <section class="main-content">
+        <div class="content">
+            <div class="content-left">
+                <h1 class="text-content">Smart IT Solutions for a Seamless Future</h1>
+                <a href="https://odecci.com/" target="_blank"><button class="btn">Get Started</button></a>
+            </div>
+            <div class="content-right">
+                <img src="assets/Launch 1.png" alt="" width="350px" height="350px">
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
