--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Welcome to Odecci</title>
-        <link rel="icon" href="assets/Icon vivid red.ico" type="image/x-icon">
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Odecci</title>
+    <link rel="icon" href="assets/Icon vivid red.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
 
-    <body>
+<body>
 
-        <!-- Logo  -->
-        <div class="logo">
-            <img src="assets/Logo.png" alt="">
-        </div>
+    <!-- Logo  -->
+    <div class="logo">
+        <img src="assets/Logo.png" alt="">
+    </div>
 
-        <!-- Main content -->
-        <section class="main-content">
-            <div class="content">
-                <div class="content-left">
-                    <h1 class="text-content">Smart IT Solutions for a Seamless Future</h1>
-                    <a href="https://odecci.com/" target="_blank">
-                        <button class="btn">Learn More<i class="arrow fa-solid fa-arrow-right"></i></button>
-                    </a>
-                </div>
-
-                <div class="content-right">
-                    <img src="assets/Launch 1.png" alt="" width="350px" height="350px">
-                </div>
+    <!-- Main content -->
+    <section class="main-content">
+        <div class="content">
+            <div class="content-left">
+                <h1 class="text-content">Smart IT Solutions for a Seamless Future</h1>
+                <a href="https://odecci.com/" target="_blank">
+                    <button class="btn">Learn More<i class="arrow fa-solid fa-arrow-right"></i></button>
+                </a>
             </div>
-        </section>
-        
-        <!-- Footer -->
-        <footer>
-            <div class="footer-content">
-                <div class="first-footer"></div>
-                <div class="second-footer"></div>
-                <div class="third-footer"><img src="assets/Footer.png" alt=""></div>
-            </div>   
-        </footer>
+
+            <div class="content-right">
+                <img src="assets/Launch 1.png" alt="" width="350px" height="350px">
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <div class="first-footer"></div>
+            <div class="second-footer"></div>
+            <div class="third-footer"><img src="assets/Footer.png" alt=""></div>
+        </div>
+    </footer>
 
 
-    </body>
+</body>
 
 </html>
