--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Odecci</title>
     <link rel="icon" href="assets/Icon vivid red.ico" type="image/x-icon">
-    <link rel="stylesheet" href="scss_files/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -22,6 +22,7 @@
         <div class="content">
             <div class="content-left">
                 <h1 class="text-content">Smart IT Solutions for a Seamless Future</h1>
+                
                 <a href="https://odecci.com/" target="_blank">
                     <button class="btn">Learn More<i class="arrow fa-solid fa-arrow-right"></i></button>
                 </a>
